# auto_sell_automata

./: .gitignore  Makefile  README.md  requirements.txt  vercel.json
api/: index.py
backend/: config.yaml  pyproject.toml
backend/app/: main.py
backend/repricer/: __init__.py  cli.py  config.py  core.py  excel_io.py
backend/tests/: test_api.py  test_config.py  test_core.py  test_duplicates.py  test_excel_io.py  test_formats.py
backend/tests/fixtures/: procenka_13col_2026-06-09.xlsx  procenka_15col_2026-07-06_markdown.xlsx  procenka_8col_2026-07-06.xlsx
frontend/: package-lock.json  package.json
frontend/public/: changelog.json
frontend/src/: App.css  App.tsx  changelog.ts  dockview-react.tsx  index.css  store.ts  types.ts
